--- a/_includes/get-well-head.html
+++ b/_includes/get-well-head.html
@@ -5,11 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="/css/main.css" rel="stylesheet" type="text/css">
   <link rel="manifest" href="/manifest.json">
-  <link rel="dns-prefetch" href="//www.google-analytics.com">
-  <link rel="dns-prefetch" href="//pagead2.googlesyndication.com">
-  <link rel="preconnect" href="//www.google-analytics.com/">
-  <link rel="preconnect" href="//pagead2.googlesyndication.com">
-  
+  <link rel="shortcut icon" href="{{ site.baseurl}}public/favicon.ico" /> 
  
   <meta name="description" content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
