--- a/_includes/get-well-footer.html
+++ b/_includes/get-well-footer.html
@@ -22,7 +22,7 @@
   
 <div id="footer">
 
-<a href="/about/">About</a>  |  <a href="mailto:hello@getwellmessages.net">Contact</a>  | <a href="/privacy-policy/">Privacy Policy</a> 
+<a href="/about/">About</a>  |  <a href="mailto:contact@getwellmessages.net">Contact</a>  | <a href="/privacy-policy/">Privacy Policy</a> 
 
       <div id="copyright"><p>© 2018 getwellmessages.net </p></div>
 
