--- a/_includes/google-adsense.html
+++ b/_includes/google-adsense.html
@@ -3,6 +3,6 @@
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({
   google_ad_client: "ca-pub-2642906032724935",
-  enable_page_level_ads: true
+  enable_page_level_ads: false
 });
 </script>
