--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -695,3 +695,157 @@ display:block;
     margin-left: auto;
     margin-right: auto;
 }
+
+
+/**
+* Navigation
+*/
+
+@import "compass/css3";
+
+@import "compass/reset";
+@import "compass/css3";
+
+//-----------------
+//Change Color Here
+$menu_Color: #fff;
+//-----------------
+
+*{
+	@include box-sizing(border-box);
+}
+body{
+	padding-top: 60px;
+	font-family: helvetica, arial, sans-serif;
+}
+a{
+	text-decoration: none;
+  color:#000;
+	@include transition(background-color .3s linear);
+}
+
+.clearfix:after{
+	content: "";
+	height:0;
+	line-height: 0;
+	clear: both;
+	display: block;
+	*zoom:1;
+}
+
+nav{
+	height: 60px;
+	width: 40%;
+	font-size: .8em;
+	position: fixed;
+	top:0;
+  margin:auto;
+}
+
+nav ul{
+	margin-top: 10px;
+	li{ 
+		float: left;
+		display: inline-block;
+		width: 100px;
+		position: relative;
+		margin-left: 10px;
+		text-align: center;
+		@include border-radius(4px);
+		&.submenu:after{
+			font-family: "FontAwesome";
+			content: "\f0d7";
+			display: block;
+			position: absolute;
+			right: 12px;
+			top:12px;
+		}
+		&:hover{
+			background-color: darken($menu_Color, 20%);
+		}
+		background-color: darken($menu_Color, 10%);
+		a{
+			padding: 10px;
+			display: block;
+			width: 100%;	
+		}
+	}
+}
+
+li{
+	>ul{
+		position: absolute;
+		left: 0;
+		padding-top:3px;
+		margin: 0;
+		display: none;
+		margin-top:0;
+		>li{
+			margin: 0 0 3px 0;
+		}
+	}
+}
+
+nav a#drop{
+	display: none;
+	background-color: darken($menu_Color, 10%);
+	line-height: 30px;
+	padding: 10px 0;
+	text-indent: 10px;
+	font-size: 1.5em;
+	width: 100%;
+	& i{
+		float: right;
+		line-height: 30px;
+		margin-right: 10px;	
+	}
+}
+
+
+/* -------------------------------------------------------- */ 
+/*	Media Queries
+/* -------------------------------------------------------- */ 
+@media screen and(max-width: 800px){
+	body{
+		padding:0;
+	}
+	nav{
+		height: auto;
+		position: static;
+		ul{
+			margin-top: 0;
+			padding: 10px;
+			display: none;
+			li{
+				display: block;
+				text-align: left;
+				//text-indent: 10px;
+				width: 100%;
+				margin-left: 0;
+				font-size: 1.2em;
+				background-color: transparent;
+				>ul{
+					position: static;
+					padding-left: 30px;
+					padding-top: 0;
+					>li{
+						text-indent: 10px;
+						font-size: 1em;
+						&:hover, &.active{
+							background-color: darken($menu_Color, 10%);
+						}
+						&:last-child{
+							margin-bottom: 8px;
+						}
+						a{
+							padding-left: 0;
+						} 
+					}
+				}
+			}
+		}
+	}
+	nav a#drop{
+		display: block;
+	}
+}
