--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -702,133 +702,173 @@ display:block;
 */
 
 
-//-----------------
-//Change Color Here
-$menu_Color: #fff;
-//-----------------
+	$primaryColor: #021320; // dark blue
+$secondaryColor: #0F9962; // green
+$tertiaryColor: #005292; // light blue
+
+$flex_nav_hoverColor:darken($secondaryColor,5%);
+$flex_nav_borderColor: darken($secondaryColor,10%);
+$flex_nav_linkColor: white;
+$flex_nav_hotdogsColor: white;
+
+$flex_nav_subNavWidth: 12.5em;
+$flex_nav_breakpoint: 48em;
 
 
-.clearfix:after{
-	content: "";
-	height:0;
-	line-height: 0;
-	clear: both;
-	display: block;
-	*zoom:1;
-}
+#nav {
+  position:relative;
+	width:50%;
+	margin:auto;
+  
+  ul {
+    display:none;
+    width:100%;
+    list-style:none;
+    margin:0px;
+    padding:0px;
+		
 
-nav{
-	height: 60px;
-	width: 40%;
-	font-size: .8em;
-	position: fixed;
-	top:0;
-  margin:auto;
-}
+li {
+      a {
+        display:block;
+        padding:1em;
+        background:$secondaryColor;
+            color:$flex_nav_linkColor;
+        text-decoration:none;
+        border-right:1px solid $flex_nav_borderColor;
+        &:hover {
+          background:$flex_nav_hoverColor;
+        }
+      }
+      &:last-of-type {
+        a {
+          border-right:0px;
+        }
+      }
+      // 2nd level
+      ul {
+        li {
+          a {
+            padding-left:1.5em;
+          }
+          ul {
+            li {
+              a {
+                padding-left:3.125em;
+              }
+            }
+          }
+        }
+      }
 
-nav ul{
-	margin-top: 10px;
-	li{ 
-		float: left;
-		display: inline-block;
-		width: 100px;
-		position: relative;
-		margin-left: 10px;
-		text-align: center;
-	 	&.submenu:after{
-			font-family: "FontAwesome";
-			content: "\f0d7";
-			display: block;
-			position: absolute;
-			right: 12px;
-			top:12px;
-		}
-		&:hover{
-			background-color: darken($menu_Color, 20%);
-		}
-		background-color: darken($menu_Color, 10%);
-		a{
-			padding: 10px;
-			display: block;
-			width: 100%;	
-		}
-	}
-}
+    } // li
+    
+  } // ul 
+  
+input.trigger {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+    &:checked ~ ul,&:checked ~ ul li ul {
+      display:block !important;
+      @media (min-width:$flex_nav_breakpoint){
+        /* older flexbox */
+        display: -webkit-box;
+        display: -moz-box;
+        display: box;
+        -webkit-box-orient: horizontal;
+        -moz-box-orient: horizontal;
+        box-orient: horizontal;
+      
+        /* newer flexbox */
+        display: flex;
+        flex-direction: row;
+      }
+    }
+  }
 
-li{
-	>ul{
-		position: absolute;
-		left: 0;
-		padding-top:3px;
-		margin: 0;
-		display: none;
-		margin-top:0;
-		>li{
-			margin: 0 0 3px 0;
-		}
-	}
-}
+label {
+    position:relative;
+    display:block;
+    min-height:2em;
+    padding:.45em;
+    font-size:1.1em;
+    margin:0;
+    cursor:pointer;
+    background:$tertiaryColor;
+    line-height: 2em;
+    color:lighten($primaryColor,80%);
+  }
+    
+label:after {
+    position: absolute;
+    right: 1em;  
+    top: .2em; 
+    content:"\2261";
+    font-size:1.8em;
+    color:$flex_nav_hotdogsColor;
+  }
+  
+  @media(min-width:$flex_nav_breakpoint){
+    ul {
+      /* older flexbox */
+      //display:block;
+      display: -ms-flexbox;
+      flex-direction: -ms-row;
+      display: -webkit-box;
+      display: -moz-box;
+      display: box;
 
-nav a#drop{
-	display: none;
-	background-color: darken($menu_Color, 10%);
-	line-height: 30px;
-	padding: 10px 0;
-	text-indent: 10px;
-	font-size: 1.5em;
-	width: 100%;
-	& i{
-		float: right;
-		line-height: 30px;
-		margin-right: 10px;	
-	}
-}
+      -webkit-box-orient: horizontal;
+      -moz-box-orient: horizontal;
+      box-orient: horizontal;
+      
+      /* newer flexbox */
+      display: flex;
+      flex-direction: row;
+      
+        -ms-flex: 1;
+        -webkit-box-flex: 1;
+        -moz-box-flex: 1;
+        box-flex: 1;
+        
+        /* newer flexbox */
+        flex: 1;
 
+        // 2nd level
+        ul {
+          display:none !important;
+          position:absolute;
+          top:3.0625em;
+          left:0;
+          display:block;
+          width:$flex_nav_subNavWidth;
+          z-index:200;
+li {
+            text-align:left;
+            ul {
+              z-index: 300;
+              top:0px;
+              left: ($flex_nav_subNavWidth - .1);
+              li {
+                a {
+                  padding-left:30px !important;
+                }
+              }
+            }
+          }
+        } // ul 2nd level
 
-/* -------------------------------------------------------- */ 
-/*	Media Queries
-/* -------------------------------------------------------- */ 
-@media screen and(max-width: 800px){
-	body{
-		padding:0;
-	}
-	nav{
-		height: auto;
-		position: static;
-		ul{
-			margin-top: 0;
-			padding: 10px;
-			display: none;
-			li{
-				display: block;
-				text-align: left;
-				//text-indent: 10px;
-				width: 100%;
-				margin-left: 0;
-				font-size: 1.2em;
-				background-color: transparent;
-				>ul{
-					position: static;
-					padding-left: 30px;
-					padding-top: 0;
-					>li{
-						text-indent: 10px;
-						font-size: 1em;
-						&:hover, &.active{
-							background-color: darken($menu_Color, 10%);
-						}
-						&:last-child{
-							margin-bottom: 8px;
-						}
-						a{
-							padding-left: 0;
-						} 
-					}
-				}
-			}
-		}
-	}
-	nav a#drop{
-		display: block;
-	}
-}
+&:hover > ul {
+          display: block !important;
+        }
+
+      } // li 
+    } // ul
+    label {
+      display:none;
+    }
+  } // breakpoint
+
+} // nav
+
