--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -722,6 +722,7 @@ display:block;
   line-height: 1em;
   font-size: 1em;
   color: #333;
+  border-style: solid;
 }
 
 .menu-toggle:hover,
@@ -880,4 +881,3 @@ display:block;
     color: #c00;
   }
 }
-
