--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -721,8 +721,9 @@ display:block;
   padding: .75em 15px;
   line-height: 1em;
   font-size: 1em;
-  color: #333;
+  color: #fff;
   border-style: solid;
+  margin:auto;
 }
 
 .menu-toggle:hover,
