--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -721,7 +721,7 @@ display:block;
   padding: .75em 15px;
   line-height: 1em;
   font-size: 1em;
-  color: #fff;
+  color: #000;
   border-style: solid;
   margin:auto;
 }
