--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -723,7 +723,8 @@ display:block;
   font-size: 1em;
   color: #000;
   border-style: solid;
-  margin:auto;
+  border-width: 1px;
+  margin: auto;
 }
 
 .menu-toggle:hover,
