--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -873,13 +873,13 @@ display:block;
   }
   
   .main-menu a {
-    color: #06c;
+    color: #000;
     border: 0 !important; /* Remove borders from off-canvas styling */
   }
   
   .main-menu a:hover,
   .main-menu a:focus {
     background: none; /* Remove background from off-canvas styling */
-    color: #c00;
+    color: #000;
   }
 }
