--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -725,7 +725,7 @@ display:block;
   border-style: solid;
   border-width: 1px;
   border-color: #000;
-  margin: auto;
+  margin: auto 0;
 }
 
 .menu-toggle:hover,
