--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -702,8 +702,7 @@ display:block;
 */
 
 
-	#logo{float:left; font-size:24px; text-transform:uppercase; color:#002e5b; font-weight:600; padding:20px 0px;}
-nav{width:auto; float:right;}
+nav{width:auto; margin:auto;}
 nav ul{display:table; float:right;}
 nav ul li{float:left;}
 nav ul li:last-child{padding-right:0px;}
