--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -703,7 +703,7 @@ display:block;
 
 
 nav{width:auto; margin:auto;}
-nav ul{display:table; float:right;}
+nav ul{display:table;}
 nav ul li{float:left;}
 nav ul li:last-child{padding-right:0px;}
 nav ul li a{color:#002e5b; font-size:18px; padding: 25px 20px; display:inline-block; transition: all 0.5s ease 0s;}
@@ -727,9 +727,8 @@ section{width:100%; max-width:1200px; margin:0px auto; display:table; position:r
 h1{margin:0px auto; display:table; font-size:26px; padding:40px 0px; color:#002e5b; text-align:center;}
 h1 span{font-weight:500;}
 
-header{width:100%; display:table; background-color:#fde428; margin-bottom:50px;}
-#logo{float:left; font-size:24px; text-transform:uppercase; color:#002e5b; font-weight:600; padding:20px 0px;}
-nav{width:auto; float:right;}
+
+nav{width:auto; margin:auto;}
 nav ul{display:table; float:right;}
 nav ul li{float:left;}
 nav ul li:last-child{padding-right:0px;}
