--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -721,15 +721,8 @@ input[type=checkbox], label{display:none;}
   
  
 
-*{text-decoration:none; list-style:none; margin:0px; padding:0px; outline:none;}
-body{margin:0px; padding:0px; font-family: 'Open Sans', sans-serif;}
-section{width:100%; max-width:1200px; margin:0px auto; display:table; position:relative;}
-h1{margin:0px auto; display:table; font-size:26px; padding:40px 0px; color:#002e5b; text-align:center;}
-h1 span{font-weight:500;}
-
-
 nav{width:auto; margin:auto;}
-nav ul{display:table; float:right;}
+nav ul{display:table;}
 nav ul li{float:left;}
 nav ul li:last-child{padding-right:0px;}
 nav ul li a{color:#002e5b; font-size:18px; padding: 25px 20px; display:inline-block; transition: all 0.5s ease 0s;}
@@ -743,15 +736,6 @@ nav ul li a i{padding-right:10px; color:#002e5b; transition: all 0.5s ease 0s;}
 
 input[type=checkbox], label{display:none;}
 
-.content{display:table; margin-bottom:60px; width:900px;}
-.content h2{font-size:18px; font-weight:500; color:#002e5b; border-bottom:1px solid #fde428; display:table; padding-bottom:10px; margin-bottom:10px;}
-.content p{font-size:14px; line-height:22px; color:#7c7c7c; text-align:justify;}
-
-footer{display:table; padding-bottom:30px; width:100%;}
-.social{margin:0px auto; display:table; display:table;}
-.social li{float:left; padding:0px 10px;}
-.social li a{color:#002e5b; transition: all 0.5s ease 0s;}
-.social li a:hover{color:#fde428; transition: all 0.5s ease 0s;}
 
 @media only screen and (max-width: 1440px) {
 section{max-width:95%;}
