--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -742,11 +742,10 @@ section{max-width:95%;}
 }
 
 @media only screen and (max-width: 980px) {
-header{padding:20px 0px;}
-#logo{padding:0px;}
+
 input[type=checkbox] {position: absolute; top: -9999px; left: -9999px; background:none;}
 input[type=checkbox]:fous{background:none;}
-label {float:right; padding:8px 0px; display:inline-block; cursor:pointer; }
+label {padding:8px 0px; display:inline-block; cursor:pointer; }
 input[type=checkbox]:checked ~ nav {display:block;}
 
 nav{display:none; position:absolute; right:0px; top:53px; background-color:#002e5b; padding:0px; z-index:99;}
@@ -761,22 +760,16 @@ nav ul li a i{color:#fde428; padding-right:13px;}
 }
 
 @media only screen and (max-width: 568px) {
-h1{padding:25px 0px;}
-h1 span{display:block;}
-}
+
 
 @media only screen and (max-width: 480px) {
 section {max-width: 90%;}
 }
 
 @media only screen and (max-width: 360px) {
-h1{font-size:20px;}
-label{padding:5px 0px;}
-#logo{font-size: 20px;}
 nav{top:47px;}
 }
 
 @media only screen and (max-width: 320px) {
-h1 {padding: 20px 0px;}
-}
+
 
