--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -767,7 +767,7 @@ section {max-width: 90%;}
 }
 
 @media only screen and (max-width: 360px) {
-nav{top:47px;}
+nav{top:47px; margin:auto;}
 }
 
 @media only screen and (max-width: 320px) {
