--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -702,134 +702,124 @@ display:block;
 */
 
 
-/* nav */
+ /* CSS Only Document */
 
-.nav {
-  background-color: #fff;
-  box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
-  width: 50%;
-  z-index: 3;
-  margin:auto;
+#nav-btn{
+    cursor: pointer;
+    height: 56px;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    width: 56px;
+    z-index: 100;
 }
-
-.nav ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  overflow: hidden;
-  background-color: #fff;
+#nav-btn + label{
+    display: block;
+    height: 4px;
+    height: 56px;
+    left: 18px;
+    position: absolute;
+    right: 18px;
+    top: 44px;
+    width: 56px;
 }
-
-.nav li a {
-  display: block;
-  padding: 20px 20px;
-  border-right: 1px solid #f4f4f4;
-  text-decoration: none;
+#nav-btn + span{
+    background-color: #ccc;
+    cursor: pointer;
+    display: block;
+    height: 4px;
+    position: absolute;
+    right: 20px;
+    top: 44px;
+    width: 56px;
+    z-index: 99;
 }
-
-.nav li a:hover,
-.nav .menu-btn:hover {
-  background-color: #f4f4f4;
+#nav-btn + span::before,
+#nav-btn + span::after{
+    background-color: #ccc;
+    content: "";
+    display: block;
+    height: 4px;
+    left: 0;
+    position: absolute;
+    width: 56px;
 }
-
-.nav .logo {
-  display: block;
-  float: left;
-  font-size: 2em;
-  padding: 10px 20px;
-  text-decoration: none;
+#nav-btn + span::before{
+    top: -20px;
 }
-
-/* menu */
-
-.nav .menu {
-  clear: both;
-  max-height: 0;
-  transition: max-height .2s ease-out;
+#nav-btn + span::after{
+    bottom: -20px;
 }
-
-/* menu icon */
-
-.nav .menu-icon {
-  cursor: pointer;
-  display: inline-block;
-  padding: 28px 20px;
-  position: relative;
-  user-select: none;
+#nav-btn:checked + span{
+    background-color: #F5060A;
 }
-
-
-.nav .menu-icon .navicon {
-  background: #333;
-  display: block;
-  height: 2px;
-  position: relative;
-  transition: background .2s ease-out;
-  width: 18px;
+#nav-btn + span::before,
+#nav-btn + span::after{
+    transition-delay: 0.3s, 0s;
+    transition-duration: 0.3s, 0.3s;
 }
-
-.nav .menu-icon .navicon:before,
-.nav .menu-icon .navicon:after {
-  background: #333;
-  content: '';
-  display: block;
-  height: 100%;
-  position: absolute;
-  transition: all .2s ease-out;
-  width: 100%;
+#nav-btn + span::before{
+    transition-property: top, transform;
 }
-
-.nav .menu-icon .navicon:before {
-  top: 5px;
+#nav-btn + span::after{
+    transition-property: bottom, transform;
 }
-
-.nav .menu-icon .navicon:after {
-  top: -5px;
+#nav-btn:checked + span{
+    background: none;
 }
-
-/* menu btn */
-
-.nav .menu-btn {
-  display: none;
+#nav-btn:checked + span::before{
+    top: 0;
+    transform: rotate(45deg);
 }
-
-.nav .menu-btn:checked ~ .menu {
-  max-height: 240px;
+#nav-btn:checked + span::after{
+    bottom: 0;
+    transform: rotate(-45deg);
 }
-
-.nav .menu-btn:checked ~ .menu-icon .navicon {
-  background: transparent;
+#nav-btn:checked + span::before,
+#nav-btn:checked + span::after{
+    transition-delay: 0s, 0.3s;
 }
-
-.nav .menu-btn:checked ~ .menu-icon .navicon:before {
-  transform: rotate(-45deg);
+#nav-btn:checked ~ nav{
+    left: 0px;
+    opacity: 100;
+    position: fixed;
+    visibility: 1;
+    z-index: 98;
 }
-
-.nav .menu-btn:checked ~ .menu-icon .navicon:after {
-  transform: rotate(45deg);
+#nav-btn:checked ~ nav ul{
+    transform: translate(-50%, -50%);
 }
-
-.nav .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
-.nav .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
-  top: 0;
+nav{
+    background: rgba(52, 82, 113, 0.98) none repeat scroll 0% 0%;
+    height: 100%;
+    opacity: 0;
+    position: absolute;
+    top: 0px;
+    transition: opacity 0.5s ease 0s, visibility 0s ease 0.5s;
+    visibility: 0;
+    width: 100%;
+    z-index: -1;
 }
-
-/* 48em = 768px */
-
-@media (min-width: 48em) {
-  .nav li {
-    float:right;
-  }
-  .nav li a {
-    padding: 20px 30px;
-  }
-  .nav .menu {
-    clear: none;
-    float: right;
-    max-height: none;
-  }
-  .nav .menu-icon {
-    display: none;
-    margin:auto;
-  }
+nav ul{
+    left: 50%;
+    moz-transition: all 1s ease-in-out;
+    o-transition: all 1s ease-in-out;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, 0%);
+    transition: all 1s ease-in-out;
+    webkit-transition: all 1s ease-in-out;
+}
+nav li{
+    font-size: 30px;
+    list-style: none;
+    padding-bottom: 10px;
+    text-align: center;
+}
+nav ul li a:hover{
+    color: #fff;
+}
+nav li a{
+    color: #ccc;
+    text-decoration: none;
 }
