--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -704,8 +704,9 @@ display:block;
 
 .nav {
   background-color: #fff;
+  box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
   margin: auto;
-  width: 50%;
+  width: 100%;
   z-index: 3;
 }
 
