--- a/_includes/get-well-header.html
+++ b/_includes/get-well-header.html
@@ -15,3 +15,17 @@
   <a class="sharing-button googleplus" href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Google Plus">Google+</a>
  
 </div>
+
+{% if page.layout == 'page' %}
+
+<time class="dt-modified" itemprop="dateModified" datetime="{{ page.last_modified_at | date: "%Y-%m-%d" }}">
+        {%- assign date_format = site.minima.date_format | default: '%b %-d, %Y' -%}
+
+        {%- if page.last_modified_at -%}
+            <p><small><em>Last updated: {{ page.last_modified_at | date: date_format }}</em></small></p>
+        {%- else -%}
+            <p><small><em>Last updated: {{ page.date | date: date_format }}</em></small></p>
+        {%- endif -%}
+      </time>
+
+{% endif %}
