--- a/_includes/get-well-head.html
+++ b/_includes/get-well-head.html
@@ -61,4 +61,7 @@
 {% if page.layout == 'page' or page.layout == 'default' and site.google_adsense %}
   {% include google-adsense.html %}
   {% endif %}
+
+{% include pinterest.html %}
+
 </head>
