--- a/_includes/adsense-middle1-responsive.html
+++ b/_includes/adsense-middle1-responsive.html
@@ -1,10 +1,11 @@
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Get Well Within Post Middle1 - Responsive -->
 <ins class="adsbygoogle"
-     style="display:block; text-align:center;"
-     data-ad-client="ca-pub-2642906032724935"
-     data-ad-slot="6211185098"
+     style="display:block"
+     data-ad-client="ca-pub-3193128641553932"
+     data-ad-slot="8308701799"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
 <script>
-(adsbygoogle = window.adsbygoogle || []).push({});
+     (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
