--- a/_includes/get-well-header.html
+++ b/_includes/get-well-header.html
@@ -12,7 +12,7 @@
 
   <a class="sharing-button facebook" href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook">Facebook</a>
 
-  <a class="sharing-button googleplus" href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Google Plus">Google+</a>
+  <a class="sharing-button pinterest" href="https://www.pinterest.com/pin/create/link/?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Pinterest">Pinterest</a>
  
 </div>
 
