--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -391,6 +391,18 @@ hr {
   text-decoration: none;  
  }
 
+
+.sharing-button.pinterest {
+  background-color: #d34836; 
+  color: #fff; 
+}
+
+.sharing-button.pinterest:hover {
+  background-color: #bd0000;
+  color: #fff; 
+  text-decoration: none;  
+ }
+
 .sharing-button.googleplus {
   background-color: #d34836; 
   color: #fff; 
